--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-__pycache__/
-./.ipynb_checkpoints/
-./stocks_data/
+.ipynb_checkpoints/
+Benchmarks/
+data/
+stocks_data/
+
 *.xlsx  
+__pycache__/
